Added ORCID to readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -42,6 +42,7 @@ Check out the [NEWS](NEWS.md) for details on the latest updates.
 
 ## Authors
 * Michael Dougherty, Geographer, U.S. Army Corps of Engineers
+<div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0002-1465-5927" href="https://orcid.org/0000-0002-1465-5927" target="orcid.widget" rel="me noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">https://orcid.org/0000-0002-1465-5927</a></div>
 * Christopher Haring, Fluvial Geomorphologist/Research Physical Scientist, U.S. Army Corps of Engineers
 * Charles Theiling, Ecologist, U.S. Army Corps of Engineers
 
