--- a/inst/reports/estimate_bankfull_report.Rmd
+++ b/inst/reports/estimate_bankfull_report.Rmd
@@ -137,7 +137,7 @@ print(fluvgeo::reach_rhg_graph(xs_dims = xs_dims,
 ```
 
 ## Longitudinal Profile
-```{r, longitudinal_profile_plot, eval=TRUE, echo=FALSE, results='asis', fig.width=7, fig.height=7, fig.cap="Logitudinal Profile Plot"}
+```{r, longitudinal_profile_plot, eval=TRUE, echo=FALSE, results='asis', fig.width=7, fig.height=7, fig.cap="Longitudinal Profile Plot"}
 
 # Convert to sp
 xs_dims_sf_zm  <- sf::st_zm(params$xs_dims_sf, what = "ZM")
@@ -224,4 +224,4 @@ for (j in as.integer(levels(as.factor(cross_section$Seq)))) {
 ```
 
 
-version 0.1.34
+version 0.1.35
