--- a/inst/reports/level_1_report.Rmd
+++ b/inst/reports/level_1_report.Rmd
@@ -19,6 +19,7 @@ params:
 ---
 
 ```{r library, eval=TRUE, include=FALSE}
+library(fluvgeo)
 library(sf)
 library(sp)
 library(dplyr)
@@ -29,6 +30,7 @@ library(ggrepel)
 library(raster)
 library(rgdal)
 library(tmap)
+library(ceramic)
 library(arcgisbinding)
 arcgisbinding::arc.check_product()
 ```
@@ -109,5 +111,5 @@ for(j in unique(cross_section$Seq)) {
 ```
 
 
-Version: 0.1.34
+Version: 0.1.35
 
