--- a/README.Rmd
+++ b/README.Rmd
@@ -1,4 +1,5 @@
 ---
+title: "ReadMe"
 output: md_document
 ---
 
@@ -12,7 +13,7 @@ An `R` Package for Performing **Fluv**ial **Geo**mrphology Analysis
 ## Package Status
 [![Maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle)
 [![Project Status: Active The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
-[![packageversion](https://img.shields.io/badge/Package%20version-0.1.34-orange.svg?style=flat-square)](commits/master)
+[![packageversion](https://img.shields.io/badge/Package%20version-0.1.35-orange.svg?style=flat-square)](commits/master)
 [![Last-changedate](https://img.shields.io/badge/last%20change-`r gsub('-', '--', Sys.Date())`-yellowgreen.svg)](/commits/master)
 [![Licence](https://img.shields.io/badge/licence-CC0-blue.svg)](http://choosealicense.com/licenses/cc0-1.0/)
 
@@ -35,8 +36,14 @@ Funding for development and maintenance of FluvialGeomorph has been provided by 
 * [Regional Sediment Management Program (RSM)](https://rsm.usace.army.mil/)
 * [Mississippi River Geomorphology and Potamology Program (MRG&P)](https://www.mvd.usace.army.mil/Missions/Mississippi-River-Science-Technology/MS-River-Geomorphology-Potamology/)
 * [Flood Risk Management Program (FRM)](https://www.iwr.usace.army.mil/Missions/Flood-Risk-Management/Flood-Risk-Management-Program/)
+* [Engineering With Nature (EWN)](https://ewn.el.erdc.dren.mil/)
 
-<img src="man/figures/FRMP_300.png" height=75 align="right" /><img src="man/figures/MRG&P_300.png" height=75 align="right" /><img src="man/figures/RSMlogo.png" height=75 align="right" /><img src="man/figures/EMRRP_logo_300.png" height=75 align="right" />
+<img src="man/figures/EWN_200.png" height=75 align="right" />
+<img src="man/figures/SilverJackets_200.png" height=75 align="right" />
+<img src="man/figures/FRMP_200.png" height=75 align="right" />
+<img src="man/figures/MRG&P_300.png" height=75 align="right" />
+<img src="man/figures/RSM_200.png" height=75 align="right" />
+<img src="man/figures/EMRRP_logo_200.png" height=75 align="right" />
 
 ## Latest Updates
 Check out the [NEWS](NEWS.md) for details on the latest updates. 
@@ -52,7 +59,7 @@ Check out the [NEWS](NEWS.md) for details on the latest updates.
 To install the `fluvgeo` package, install from GitHub using the `devtools` package:
 
 ```{r install, eval=FALSE}
-devtools::install_github(repo = "FluvialGeomorph/fluvgeo", build_vignettes = TRUE)
+remotes::install_github(repo = "FluvialGeomorph/fluvgeo@*release")
 ```
 
 ## Bug Reports
