--- a/README.Rmd
+++ b/README.Rmd
@@ -4,6 +4,7 @@ output: md_document
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+<!-- rmarkdown::render(input="README.Rmd", output_file = "README.md", output_format = "md_document") -->
 
 <img src="man/figures/fluvgeo-3.png" width=250 align="right" />
 
@@ -13,7 +14,7 @@ An `R` Package for Performing **Fluv**ial **Geo**mrphology Analysis
 ## Package Status
 [![Maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle)
 [![Project Status: Active The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
-[![packageversion](https://img.shields.io/badge/Package%20version-0.1.43-orange.svg?style=flat-square)](commits/master)
+[![packageversion](https://img.shields.io/badge/Package%20version-0.1.44-orange.svg?style=flat-square)](commits/master)
 [![Last-changedate](https://img.shields.io/badge/last%20change-`r gsub('-', '--', Sys.Date())`-yellowgreen.svg)](/commits/master)
 [![Licence](https://img.shields.io/badge/licence-CC0-blue.svg)](http://choosealicense.com/licenses/cc0-1.0/)
 
