removed 'ceramic' from package and implemented 'terrainr' and 'maptiles'

--- a/inst/reports/level_1_report.Rmd
+++ b/inst/reports/level_1_report.Rmd
@@ -30,7 +30,9 @@ library(ggrepel)
 library(raster)
 library(rgdal)
 library(tmap)
-library(ceramic)
+library(maptiles)
+library(terra)
+library(terrainr)
 library(arcgisbinding)
 arcgisbinding::arc.check_product()
 ```
