--- a/data-raw/Create_package_data_sf.Rmd
+++ b/data-raw/Create_package_data_sf.Rmd
@@ -26,56 +26,56 @@ data_path <- "C:/workspace/fluvgeo/inst/extdata/testing_data.gdb/feature_dataset
 # Import geospatial datasets
 sin_flowline_sf                 <- fluvgeo::arc2sf(paste0(data_path, 
                                                 "flowline"))
-sin_flowline_points_sp          <- fluvgeo::arc2sp(paste0(data_path, 
+sin_flowline_points_sf          <- fluvgeo::arc2sf(paste0(data_path, 
                                                 "flowline_points"))
-sin_banklines_sp                <- fluvgeo::arc2sp(paste0(data_path, 
+sin_banklines_sf                <- fluvgeo::arc2sf(paste0(data_path, 
                                                 "banklines"))
-sin_bankline_points_sp          <- fluvgeo::arc2sp(paste0(data_path, 
+sin_bankline_points_sf          <- fluvgeo::arc2sf(paste0(data_path, 
                                                 "bankline_points"))
-sin_features_sp                 <- fluvgeo::arc2sp(paste0(data_path, 
+sin_features_sf                 <- fluvgeo::arc2sf(paste0(data_path, 
                                                 "features"))
-sin_loop_points_sp              <- fluvgeo::arc2sp(paste0(data_path, 
+sin_loop_points_sf              <- fluvgeo::arc2sf(paste0(data_path, 
                                                 "loop_points"))
-sin_riffle_channel_sp           <- fluvgeo::arc2sp(paste0(data_path, 
+sin_riffle_channel_sf           <- fluvgeo::arc2sf(paste0(data_path, 
                                                 "riffle_channel"))
-sin_riffle_channel_points_sp    <- fluvgeo::arc2sp(paste0(data_path, 
+sin_riffle_channel_points_sf    <- fluvgeo::arc2sf(paste0(data_path, 
                                                 "riffle_channel_points"))
-sin_riffle_floodplain_sp        <- fluvgeo::arc2sp(paste0(data_path, 
+sin_riffle_floodplain_sf        <- fluvgeo::arc2sf(paste0(data_path, 
                                                 "riffle_floodplain"))
-sin_riffle_floodplain_points_sp <- fluvgeo::arc2sp(paste0(data_path, 
+sin_riffle_floodplain_points_sf <- fluvgeo::arc2sf(paste0(data_path, 
                                                 "riffle_floodplain_points"))
-sin_riffle_floodplain_dims_L1_sp <- fluvgeo::arc2sp(paste0(data_path, 
+sin_riffle_floodplain_dims_L1_sf <- fluvgeo::arc2sf(paste0(data_path, 
                                                 "riffle_floodplain_dims_L1"))
-sin_riffle_floodplain_dims_L2_sp <- fluvgeo::arc2sp(paste0(data_path, 
+sin_riffle_floodplain_dims_L2_sf <- fluvgeo::arc2sf(paste0(data_path, 
                                                 "riffle_floodplain_dims_L2"))
-sin_riffle_floodplain_dims_L3_sp <- fluvgeo::arc2sp(paste0(data_path, 
+sin_riffle_floodplain_dims_L3_sf <- fluvgeo::arc2sf(paste0(data_path, 
                                                  "riffle_floodplain_dims_L3"))
-sin_valleyline_sp               <- fluvgeo::arc2sp(paste0(data_path, 
+sin_valleyline_sf               <- fluvgeo::arc2sf(paste0(data_path, 
                                                  "valleyline"))
-sin_valleyline_points_sp        <- fluvgeo::arc2sp(paste0(data_path, 
+sin_valleyline_points_sf        <- fluvgeo::arc2sf(paste0(data_path, 
                                                  "valleyline_points"))
-sin_gradient_sp                 <- fluvgeo::arc2sp(paste0(data_path, 
+sin_gradient_sf                 <- fluvgeo::arc2sf(paste0(data_path, 
                                                  "gradient_1"))
 ```
 
 ```{r}
 # convert to .rda files
-usethis::use_data(sin_flowline_sp, overwrite = TRUE)
-usethis::use_data(sin_flowline_points_sp, overwrite = TRUE)
-usethis::use_data(sin_banklines_sp, overwrite = TRUE)
-usethis::use_data(sin_bankline_points_sp, overwrite = TRUE)
-usethis::use_data(sin_features_sp, overwrite = TRUE)
-usethis::use_data(sin_loop_points_sp, overwrite = TRUE)
-usethis::use_data(sin_riffle_channel_sp, overwrite = TRUE)
-usethis::use_data(sin_riffle_channel_points_sp, overwrite = TRUE)
-usethis::use_data(sin_riffle_floodplain_sp, overwrite = TRUE)
-usethis::use_data(sin_riffle_floodplain_points_sp, overwrite = TRUE)
-usethis::use_data(sin_riffle_floodplain_dims_L1_sp, overwrite = TRUE)
-usethis::use_data(sin_riffle_floodplain_dims_L2_sp, overwrite = TRUE)
-usethis::use_data(sin_riffle_floodplain_dims_L3_sp, overwrite = TRUE)
-usethis::use_data(sin_valleyline_sp, overwrite = TRUE)
-usethis::use_data(sin_valleyline_points_sp, overwrite = TRUE)
-usethis::use_data(sin_gradient_sp, overwrite = TRUE)
+usethis::use_data(sin_flowline_sf, overwrite = TRUE)
+usethis::use_data(sin_flowline_points_sf, overwrite = TRUE)
+usethis::use_data(sin_banklines_sf, overwrite = TRUE)
+usethis::use_data(sin_bankline_points_sf, overwrite = TRUE)
+usethis::use_data(sin_features_sf, overwrite = TRUE)
+usethis::use_data(sin_loop_points_sf, overwrite = TRUE)
+usethis::use_data(sin_riffle_channel_sf, overwrite = TRUE)
+usethis::use_data(sin_riffle_channel_points_sf, overwrite = TRUE)
+usethis::use_data(sin_riffle_floodplain_sf, overwrite = TRUE)
+usethis::use_data(sin_riffle_floodplain_points_sf, overwrite = TRUE)
+usethis::use_data(sin_riffle_floodplain_dims_L1_sf, overwrite = TRUE)
+usethis::use_data(sin_riffle_floodplain_dims_L2_sf, overwrite = TRUE)
+usethis::use_data(sin_riffle_floodplain_dims_L3_sf, overwrite = TRUE)
+usethis::use_data(sin_valleyline_sf, overwrite = TRUE)
+usethis::use_data(sin_valleyline_points_sf, overwrite = TRUE)
+usethis::use_data(sin_gradient_sf, overwrite = TRUE)
 ```
 
 
