--- a/inst/reports/level_1_report.Rmd
+++ b/inst/reports/level_1_report.Rmd
@@ -26,7 +26,6 @@ library(knitr)
 library(pander)
 library(ggplot2)
 library(ggrepel)
-library(raster)
 library(tmap)
 library(terra)
 library(terrainr)
@@ -85,8 +84,7 @@ print(fluvgeo::xs_metrics_plot_L1(xs_dims_sf = params$cross_section_sf,
 ```{r cross_section_plots, echo=FALSE, results='asis', fig.width=7, fig.height=4, warning=FALSE, error=FALSE, message=FALSE}
 if(params$show_xs_map) {
   # Get dem raster
-  dem_raster <- fluvgeo::esri_raster2RasterLayer(raster_path = params$dem)
-  dem_rast <- terra::rast(dem_raster)
+  dem_rast <- fluvgeo::esri_raster2SpatRaster(raster_path = params$dem)
 }
 
 # Ensure that cross sections are sequentially ordered
@@ -111,5 +109,5 @@ for(j in unique(cross_section$Seq)) {
 ```
 
 
-Version: 0.1.35
+Version: 0.1.48
 
