--- a/inst/reports/estimate_bankfull_report.Rmd
+++ b/inst/reports/estimate_bankfull_report.Rmd
@@ -164,7 +164,7 @@ This section displays cross section profile graphs for each riffle cross section
 ```{r, xs_plots, echo=FALSE, results='asis', message=FALSE, warning=FALSE, fig.width=7, fig.height=4}
 if(params$show_xs_map) {
   # Get dem raster
-  dem_rast <- fluvgeo::esri_raster2SpatRaster(raster_path = params$dem)
+  dem_rast <- fluvgeo::arc_raster2SpatRaster(raster_path = params$dem)
 }
 
 # Ensure that cross sections are sequentially ordered
