updated level_1_report_b parameter defaults

--- a/inst/reports/level_1_report_b.Rmd
+++ b/inst/reports/level_1_report_b.Rmd
@@ -11,13 +11,13 @@ params:
   xs_points_sf_list: ""
   dem: ""
   show_xs_map: FALSE
-  profile_units: ""
+  profile_units: "kilometers"
   aerial: TRUE
   elevation: FALSE
   xs_label_freq: 5
   exaggeration: 10
   extent_factor: 1.1
-  output_format: ""
+  output_format: "word_document"
 output: 
   word_document:
     reference_docx: word_template.docx
@@ -28,7 +28,6 @@ library(fluvgeo)
 library(sf)
 library(dplyr)
 library(knitr)
-library(pander)
 library(ggplot2)
 library(ggrepel)
 library(patchwork)
@@ -64,7 +63,7 @@ if(elevation) {
 ## Longitudinal Profile
 ```{r long_profile, echo=FALSE, fig.width=7, fig.height=5, fig.cap="Longitudinal Profile Plot"}
 print(fluvgeo::compare_long_profile(stream = params$stream,
-                            flowline_pts_sf_list = flowline_pts_sf_list,
+                            flowline_pts_sf_list = params$flowline_pts_sf_list,
                             features_sf = params$features_sf,
                             profile_units = params$profile_units))
 ```
@@ -85,7 +84,6 @@ print(fluvgeo::xs_metrics_plot_L1(xs_dims_sf = params$cross_section_sf,
                                   profile_units = params$profile_units))
 ```
 
-
 ## Cross Section Profiles
 ```{r cross_section_plots, echo=FALSE, results='asis',fig.width=7, fig.height=9, warning=FALSE, error=FALSE, message=FALSE}
 # Get dem raster
@@ -97,13 +95,13 @@ cross_section <- dplyr::arrange(report_params$cross_section_sf, Seq)
 # Iterate through cross sections
 for(j in unique(cross_section$Seq)) {
   # Create cross section profiles plot
-  print(fig_xs_profiles(cross_section = cross_section,
-                        xs_number = j,
-                        dem = dem_rast,
-                        channel = report_params$channel_sf,
-                        floodplain = report_params$floodplain_sf,
-                        extent_factor = extent_factor,
-                        xs_pts_sf_list = xs_pts_sf_list))
+  print(fig_xs_profiles_L1(cross_section = cross_section,
+                           xs_number = j,
+                           dem = dem_rast,
+                           channel = params$channel_sf,
+                           floodplain = params$floodplain_sf,
+                           extent_factor = params$extent_factor,
+                           xs_pts_sf_list = params$xs_pts_sf_list))
   # Insert vertical white space so that next figure in loop is recognized
   cat('\n')
   # Must set chunk option`results='asis'` to ensure table is drawn properly
